RESOLVED FIXED74964
requestAnimationFrame on Mac fires at 60fps even when drawing is much slower
https://bugs.webkit.org/show_bug.cgi?id=74964
Summary requestAnimationFrame on Mac fires at 60fps even when drawing is much slower
Simon Fraser (smfr)
Reported 2011-12-20 15:19:07 PST
requestAnimationFrame on Mac will queue up notifications on the main thread even when the previous event is still being handled. That results in uneven rAF intervals (slow/fast/fast/fast/slow...) and untruths in framerate reporting.
Attachments
Patch (5.05 KB, patch)
2011-12-20 15:27 PST, Simon Fraser (smfr)
levin: review+
Simon Fraser (smfr)
Comment 1 2011-12-20 15:19:38 PST
Simon Fraser (smfr)
Comment 2 2011-12-20 15:27:25 PST
Simon Fraser (smfr)
Comment 3 2011-12-20 15:55:50 PST
Note You need to log in before you can comment on or make changes to this bug.