requestAnimationFrame on Mac fires at 60fps even when drawing is much slower https://bugs.webkit.org/show_bug.cgi?id=74964

Reviewed by Chris Marrin.

On Mac requestAnimationFrame uses a CVDisplayLink, sending notifications
from the display link thread to the main thread that the display link fired.
However, there was no throttling on these notifications; if processing an event
took a long time, notifications would pile up, and then get handled after
the slow event completed.

This would cause JS animations which animate by changing style to report
60fps when their display framerate was much lower.

Fix by throttling notifications from the display link thread to the web
thread; if the previous event hasn't completed yet, don't send any new ones.

No new tests, since testing this runtime behavior is hard.

* platform/graphics/DisplayRefreshMonitor.cpp:
(WebCore::DisplayRefreshMonitor::DisplayRefreshMonitor):
(WebCore::DisplayRefreshMonitor::refreshDisplayOnMainThread):
(WebCore::DisplayRefreshMonitor::notifyClients): Factored out of the
static refreshDisplayOnMainThread method so we can use 'this'.
* platform/graphics/DisplayRefreshMonitor.h:
* platform/graphics/mac/DisplayRefreshMonitorMac.cpp:
(WebCore::DisplayRefreshMonitor::displayLinkFired):

Canonical link: https://commits.webkit.org/91718@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103361 268f45cc-cd09-0410-ab3c-d52691b4dbfc